jenkins_mock/examples/multi_rpm/repos/app-multi-rpm/kubeobjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-rpm
  labels:
    app: multi-rpm
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: multi-rpm
    deploymentconfig: multi-rpm
