jenkins_mock/examples/multi_rpm/repos/app-multi-rpm/kubeobjs/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: multi-rpm
  labels:
    app: multi-rpm
spec:
  to:
    kind: Service
    name: multi-rpm
